Created an haeder

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- CDN Font Awesome -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <!-- Link file CSS Bootstrap -->
     <link rel="stylesheet" href="./CSS/Bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./CSS/Bootstrap/bootstrap.rtl.min.css">
@@ -13,6 +15,35 @@
     <title>Weather API</title>
 </head>
 <body>
+    <header class="border-bottom border-dark">
+        <div class="container-fluid">
+            <div class="row justify-content-between">
+                <div class="col-5 col-sm-3 col-md-2">
+                    <a href="">
+                        <img class="img-fluid" src="./images/34.jpg" alt=" Weather logo">
+                    </a>
+                </div>
+                <div class="col-2 align-self-center d-md-none">
+                    <i class="fa-solid fa-bars fs-3 "></i>
+                </div>
+                <div class="d-none d-md-block col-md-10 align-self-center">
+                    <nav>
+                        <ul class="d-flex justify-content-end list-unstyled mb-0">
+                            <li class="me-2">
+                                <a href="">Home</a>
+                            </li>
+                            <li class="me-2">
+                                <a href="">Sevizi</a>
+                            </li>
+                            <li class="me-2">
+                                <a href="">Chi Siamo</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
     
 </body>
     <!-- link my JS -->
