--- a/index.html
+++ b/index.html
@@ -19,33 +19,47 @@
         <div class="container-fluid">
             <div class="row justify-content-between">
                 <div class="col-5 col-sm-3 col-md-2">
-                    <a href="">
+                    <a href="#">
                         <img class="img-fluid" src="./images/34.jpg" alt=" Weather logo">
                     </a>
                 </div>
-                <div class="col-2 align-self-center d-md-none">
-                    <i class="fa-solid fa-bars fs-3 "></i>
+                <div class="col-2 align-self-center d-md-none position-relative">
+                    <i class="fa-solid fa-bars fs-3 " id="my-icon-collapse"></i>
                 </div>
                 <div class="d-none d-md-block col-md-10 align-self-center">
                     <nav>
                         <ul class="d-flex justify-content-end list-unstyled mb-0">
                             <li class="me-2">
-                                <a href="">Home</a>
+                                <a href="#" class="text-reset text-decoration-none active">Home</a>
                             </li>
                             <li class="me-2">
-                                <a href="">Sevizi</a>
+                                <a href="#" class="text-reset text-decoration-none">Sevizi</a>
                             </li>
                             <li class="me-2">
-                                <a href="">Chi Siamo</a>
+                                <a href="#" class="text-reset text-decoration-none">Chi Siamo</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </div>
+        <nav id="my-nav-collapse" class="d-md-none border-bottom border-dark bg-warning">
+            <ul class="list-unstyled mb-0">
+                <li class="me-2 d-inline">
+                    <a href="#" class="text-reset text-decoration-none active">Home</a>
+                </li>
+                <li class="me-2 d-inline">
+                    <a href="#" class="text-reset text-decoration-none">Sevizi</a>
+                </li>
+                <li class="me-2 d-inline">
+                    <a href="#" class="text-reset text-decoration-none">Chi Siamo</a>
+                </li>
+            </ul>
+        </nav>
     </header>
     
+    
 </body>
-    <!-- link my JS -->
-    <script src="./JS/myscript.js"></script>
+    <!-- My script js that manages the dynamics of the header -->
+    <script src="./JS/headerScript.js"></script>
 </html>
