--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
     <header class="border-bottom border-dark">
         <div class="container-fluid">
-            <div class="row justify-content-between">
+            <div class="row justify-content-between align-items-center">
                 <div class="col-5 col-sm-3 col-md-2">
                     <a href="#">
                         <img class="img-fluid" src="./images/34.jpg" alt=" Weather logo">
                     </a>
                 </div>
-                <div class="col-2 align-self-center d-md-none position-relative">
+                <div class="col-2 d-md-none position-relative">
                     <i class="fa-solid fa-bars fs-3 " id="my-icon-collapse"></i>
                 </div>
                 <div class="d-none d-md-block col-md-10 align-self-center">
